# TinyAD

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: DeferredLambdaInstantiation.md
include/TinyAD/: Scalar.hh  ScalarFunction.hh  VectorFunction.hh
include/TinyAD/Detail/: EigenVectorTypedefs.hh  Element.hh  EvalSettings.hh  Parallel.hh  ScalarFunctionImpl.hh  ScalarObjectiveTerm.hh  VectorFunctionImpl.hh  VectorObjectiveTerm.hh
include/TinyAD/Operations/: SVD.hh
include/TinyAD/Support/: Common.hh  GeometryCentral.hh  OpenMesh.hh  PMP.hh  Polymesh.hh
include/TinyAD/Utils/: GaussNewtonDirection.hh  Helpers.hh  HessianProjection.hh  LineSearch.hh  LinearSolver.hh  NewtonDecrement.hh  NewtonDirection.hh  Out.hh  Timer.hh  ToPassive.hh
scripts/: compare_build_time.bat
tests/: ComplexTest.cc  CustomDerivativesTest.cc  DeferredLambdaTest.cc  DynamicElementsTest.cc  EigenTest.cc  ElementTest.cc  ExceptionTest.cc  GaussNewtonTest.cc  HandleTypeTest.cc  Meshes.hh  NewtonTest.cc  OpenMPTest.cc  PerformanceTest.cc  SVDTest.cc  ScalarDynamicTest.cc  ScalarFunctionTest.cc  ScalarTest.cc  ScalarTestBinaryOperators.cc  ScalarTestComparison.cc  ScalarTestConstructors.cc  ScalarTestHessianBlock.cc  ScalarTestMisc.cc  ScalarTestUnaryOperators.cc  SwitchSolverTest.cc  VectorFunctionTest.cc
